# CppCmakeStarterProject

./: CMakeLists.txt  readme.md
ccsp_app/: CMakeLists.txt  main.cpp
ccsp_lib/: CMakeLists.txt
ccsp_lib/include/: CMakeLists.txt
ccsp_lib/include/ccsp_lib/: CMakeLists.txt  literals.hpp  macros.hpp  numbers.hpp  types.hpp
ccsp_lib/src/numbers/: CMakeLists.txt  is_power_of_two.cpp  reverse_bits.cpp
ccsp_lib/tests/: CMakeLists.txt
cmake/: developer_mode.cmake  install_structure.cmake  output_structure.cmake
cmake/compiler_flags/: cxx_standard.cmake  fast_math.cmake  ipo_support.cmake  iso_flags.cmake  x86_high_simd.cmake
cmake/dependencies/: qt.cmake
